# Paquete_optimizacion_byzamm079

./: LICENSE  pyproject.toml
docs/: .readthedocs.yaml  mkdocs.yml
src/Paquete_optimizacion_byzamm079.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
