[project]
name = "Paquete_optimizacion_byzamm079"
version = "0.0.1"
authors = [
  { name="zamm079", email="azi3lmtz@gmail.com" },
]
description = "Paqueteria de optimizacion multivariable y univariable"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/zamm079/Paquete_optimizacion_byzamm079"
Issues = "https://github.com/zamm079/Paquete_optimizacion_byzamm079/issues"